30 July 2021: Wouter
	- Fix #515: Compilation against openssl 3.0.0 beta2 is failing to
	  build unbound.
	- For #515: Fix compilation with openssl 3.0.0 beta2, lib64 dir and
	  SSL_get_peer_certificate.
	- Move acx_nlnetlabs.m4 to version 41, with lib64 openssl dir check.

26 July 2021: George
	- Merge #513: Stream reuse, attempt to fix #411, #439, #469. This
	  introduces a couple of fixes for the stream reuse functionality
	  that could result in broken internal structures.

26 July 2021: Wouter
	- Merge #512: unbound.service.in: upgrade hardening to latest
	  standards.
	- Fix readzone unknown type print for memory resize.

21 July 2021: Wouter
	- Fix that ldns_zone_new_frm_fp_l counts the line number for an empty
	  line after a comment.

16 July 2021: George
	- Introduce 'http-user-agent:' and 'hide-http-user-agent:' options.

16 July 2021: Wouter
	- Merge #510 from ndptech: Don't call a function which hasn't been
	  defined.
	- Fix for #510: in depth, use ifdefs for windows api event calls.
	- Fix spelling in doc/unbound.doxygen comment.
	- Fix spelling in localzone.h comment.
	- Fix unbound-control local_data and local_datas to print detailed
	  syntax errors.
	- review fix to remove duplicate error printout.
	- Insert header into testcode/readzone.c, it was missing.
	- Fix from lint for ignored return value.
	- Fix for older parsers for function call in serve expired get cached.

6 July 2021: Wouter
	- iana portlist update.

5 July 2021: George
	- Fix compiler warnings for #491.
	- Fix clang-analysis warnings for testcode/readzone.c.

4 July 2021: George
	- Fix Wunused-result compile warnings.

2 July 2021: Tom
	- Merge PR #491: Add SVCB and HTTPS types and handling according to
	  draft-ietf-dnsop-svcb-https.

2 July 2021: Wouter
	- Fix #506: Python Module Seems to Leak Memory if it Experiences an
	  Unhandled Exception.

25 June 2021: Wouter
	- Fix up permissions on rpl data file in tests.